@@ -1,5 +1,9 @@
 2015-01-25  Ola Jeppsson  <ola@adapteva.com>
 
+	* scripts/build_and_test_all.sh: Improve testing and output.
+
+2015-01-25  Ola Jeppsson  <ola@adapteva.com>
+
 	* labs/hardware_barrier/src/emain.c (int main): Add
 	synchronization point between first E core and host so that
 	the host can read out the core iteration counters in a
